Testing using more datasets, more evaluation scripts, attempting to more accurately model FBI

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,25 @@
 *.asv
 Output/
 .vscode/
+*.pkl
+ConvNet/adamGD_SoftmaxCross_2overpiGamma_Net128_4kernels_SimpleDigits_NLquartiledata
+ConvNet/adamGD_SoftmaxCross_2overpiGamma_Net128_SimpleDigits_NLdeltadata
+ConvNet/adamGD_SoftmaxCross_2overpiGamma_Net6464_SimpleDigits_NLquartiledata
+ConvNet/adamGD_SoftmaxCross_2overpiGamma_SimpleDigits_NLdata
+ConvNet/adamGD_SoftmaxCross_2overpiGamma_SimpleDigits_NLquartiledata
+ConvNet/params1
+FullConvNet/adamGD_SoftmaxCross_2overpiGamma_FullNet128_SimpleDigits_NLquartiledata
+FullConvNet/adamGD_SoftmaxCross_2overpiGamma_FullNet6464_SimpleDigits_NLquartiledata
+IncoherentNet/adamGD_SoftmaxCross_2overpiGamma_IncoherentNet1616_heartDataset
+IncoherentNet/adamGD_SoftmaxCross_2overpiGamma_Net1616_heartDataset
+IncoherentNet/adamGD_SoftmaxCross_2overpiGamma_Net1616_IrisDataset
+*.csv
+*.data
+IrisFullNet/adamGD_SoftmaxCross_2overpiGamma_FullNet1616_IrisDataset
+IrisFullNet/adamGD_SoftmaxCross_2overpiGamma_Net1616_IrisDataset
+IrisNet/adamGD_SoftmaxCross_2overpiGamma_Net1616_heartDataset
+IrisNet/adamGD_SoftmaxCross_2overpiGamma_Net1616_IrisDataset
+MNISTConvNet/adamGD_SoftmaxCross_2overpiGamma_NLdata
+SemeionConvNet/adamGD_SoftmaxCross_2overpiGamma_Net128_SemeionDataset
+SemeionConvNet/adamGD_SoftmaxCross_2overpiGamma_Net128_ShapesDataset
+*.png
