--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,14 @@ MNISTConvNet/adamGD_SoftmaxCross_2overpiGamma_NLdata
 SemeionConvNet/adamGD_SoftmaxCross_2overpiGamma_Net128_SemeionDataset
 SemeionConvNet/adamGD_SoftmaxCross_2overpiGamma_Net128_ShapesDataset
 *.png
+CoherentNet/adamGD_SoftmaxCross_2overpiGamma_CoherentNet1616_heartDataset
+CoherentNet/adamGD_SoftmaxCross_2overpiGamma_CoherentNet3224_nl_heartDataset
+CoherentNet/gamma_error_curves_0.01t10t5_heartdisease_coherentnet1616
+CoherentNet/gamma_error_curves_0.1_heartdisease_coherentnet1616
+CoherentNet/gamma_error_curves_0.1t4t3_heartdisease_coherentnet1616
+CoherentNet/gamma_error_curves_0.825_heartdisease_coherentnet1616
+CoherentNet/gamma_error_curves_1.0666666666666667_heartdisease_coherentnet1616
+CoherentNet/gamma_error_curves_1.55_heartdisease_coherentnet1616
+CoherentNet/gamma_error_curves_2.033333333333333_heartdisease_coherentnet1616
+CoherentNet/gamma_error_curves_2.275_heartdisease_coherentnet1616
+CoherentNet/gamma_error_curves_3.0_heartdisease_coherentnet1616
