updated plotting and saving methods

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@ CoherentNet/gamma_error_curves_1.55_heartdisease_coherentnet1616
 CoherentNet/gamma_error_curves_2.033333333333333_heartdisease_coherentnet1616
 CoherentNet/gamma_error_curves_2.275_heartdisease_coherentnet1616
 CoherentNet/gamma_error_curves_3.0_heartdisease_coherentnet1616
+*.3250000000000002_heartdisease_coherentnet1616
+CoherentNet/gamma_error_curves_2.5500000000000003_heartdisease_coherentnet1616
+CoherentNet/gamma_error_curves_3.7750000000000004_heartdisease_coherentnet1616
+CoherentNet/gamma_error_curves_5.0_heartdisease_coherentnet1616
+SemeionConvNet/adamGD_SoftmaxCross_2Gamma_Net128_ShapesDataset
+*.json
