more testing of networks and plotting scripts

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ CoherentNet/gamma_error_curves_3.7750000000000004_heartdisease_coherentnet1616
 CoherentNet/gamma_error_curves_5.0_heartdisease_coherentnet1616
 SemeionConvNet/adamGD_SoftmaxCross_2Gamma_Net128_ShapesDataset
 *.json
+CoherentNet/adamGD_SoftmaxCross_2Gamma_CoherentNet1616_heartDataset
