tensorflow implementation added, playing with bias initialisation

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,11 @@ CoherentNet/gamma_error_curves_5.0_heartdisease_coherentnet1616
 SemeionConvNet/adamGD_SoftmaxCross_2Gamma_Net128_ShapesDataset
 *.json
 CoherentNet/adamGD_SoftmaxCross_2Gamma_CoherentNet1616_heartDataset
+CoherentNet/adamGD_SoftmaxCross_2Gamma_CoherentNet1616_heartDataset_NLdata
+CoherentNet/adamGD_SoftmaxCross_4Gamma_bias1b_CoherentNet3232_heartDataset_NLdata_try0
+CoherentNet/adamGD_SoftmaxCross_4Gamma_bias5b_CoherentNet3232_heartDataset_NLdata_try0
+IrisNet/adamGD_SoftmaxCross_10_3_Gamma_Net3232_heartDataset_varyLR
+*.index
+*.meta
+*.data-00000-of-00001
+MNISTConvNetTF/checkpoints/checkpoint
